Quorum3/Library/Tests/Expressions/Pass/SubIntInt.quorum
class Main
    action Main
        integer a = 1 - 1
        output a
        output 1 - 1
    end
end