Quorum3/Library/Tests/Expressions/Fail/SelfInitialize.quorum
class Main
    action Main
        integer a = a
        output "About to output integer " + a
    end
end